--- a/index.html
+++ b/index.html
@@ -1,10 +1,87 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>My Sample Art Store</title>
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>My Sample Art Store</h1> 
+	<a href="#">Home</a> | 
+	<a href="#">Artists</a> | 
+	<a href="#">Artworks</a> | 
+	<a href="#">About Us</a> | 
+	<a href="#">Search</a>
+
+	<h2>Mademoiselle Caroline Rivière</h2>
+	<p>by <a href="#">Jean-Auguste-Dominique-Ingres</a></p>
+	<img src="images/painting1_medium.jpg">
+	<p>The portrait of Mademoiselle Caroline Rivière was painted in 1806 by the French Neoclassical artist Jean Auguste Dominique Ingres, and today hangs in the Louvre. It is the third of three portraits of Rivière family the artist painted that year.</p>
+
+	<p>
+	<strong>Date:</strong> <em>1806</em>	<br>
+	<strong>Medium:</strong> <em>Oil on Canvas</em> <br>
+	<strong>Dimensions:</strong> <em>100 x 70 cm</em> <br>
+	<strong>Home:</strong> <em>Musèe de Louvre, Paris</em> <br>
+	</p>
+
+	<img src="images/add-to-basket_btn.png"> 
+	<img src="images/add-to-favorites_btn.png">
+
+	<p>
+	Share: 
+	<img src="images/social/email_16.png"> 
+	<img src="images/social/twitter_16.png"> 
+	<img src="images/social/facebook_16.png"> 
+	<img src="images/social/sharethis_16.png">
+	</p>
+
+	<h3>Related Paintings</h3>
+	<img src="images/related1_small.jpg">
+	<img src="images/related2_small.jpg">
+	<img src="images/related3_small.jpg">
+	<img src="images/related4_small.jpg">
+	<h3> Reviews </h3>
+	
+	<p> 
+	<strong> Love this painting </strong> 
+	<br>
+	John Smith
+	<img src="images/star-orange.png">
+	<img src="images/star-orange.png">
+	<img src="images/star-orange.png">
+	<img src="images/star-orange.png">
+	<img src="images/star-white.png">
+	</p>
+
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+	</p>
+
+	<hr>
+
+	<p> 
+	<strong> It's okay </strong> 
+	<br>
+	Jane Doe
+	<img src="images/star-orange.png">
+	<img src="images/star-orange.png">
+	<img src="images/star-orange.png">
+	<img src="images/star-white.png">
+	<img src="images/star-white.png">
+	</p>
+
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+	</p>
+
+	<hr>
+	<p>
+	<a href="#">Home</a> | 
+	<a href="#">Artists</a> | 
+	<a href="#">Artworks</a> | 
+	<a href="#">About Us</a> | 
+	<a href="#">Search</a>
+	</p>
+	<p>
+	<em>Copyright 2013 My Sample Art Store</em>
+	</p>
 
 </body>
 </html>
